refactor send otp and include purpose
